--- a/packages/admin-ui/src/lib/marketing/src/components/promotion-detail/promotion-detail.component.html
+++ b/packages/admin-ui/src/lib/marketing/src/components/promotion-detail/promotion-detail.component.html
@@ -3,7 +3,7 @@
         <div class="flex clr-align-items-center">
             <vdr-entity-info [entity]="entity$ | async"></vdr-entity-info>
             <clr-toggle-wrapper *vdrIfPermissions="'UpdatePromotion'">
-                <input type="checkbox" clrToggle name="enabled" [formControl]="detailForm.get(['enabled'])"/>
+                <input type="checkbox" clrToggle name="enabled" [formControl]="detailForm.get(['enabled'])" />
                 <label>{{ 'common.enabled' | translate }}</label>
             </clr-toggle-wrapper>
         </div>
@@ -74,6 +74,12 @@
             [readonly]="!('UpdatePromotion' | hasPermission)"
         ></vdr-tabbed-custom-fields>
     </section>
+
+    <vdr-custom-detail-component-host
+        locationId="promotion-detail"
+        [entity$]="entity$"
+        [detailForm]="detailForm"
+    ></vdr-custom-detail-component-host>
 
     <div class="clr-row">
         <div class="clr-col" formArrayName="conditions">
