--- a/packages/admin-ui/src/lib/order/src/components/order-detail/order-detail.component.html
+++ b/packages/admin-ui/src/lib/order/src/components/order-detail/order-detail.component.html
@@ -118,6 +118,12 @@
                 </tbody>
             </table>
 
+            <vdr-custom-detail-component-host
+                locationId="order-detail"
+                [entity$]="entity$"
+                [detailForm]="detailForm"
+            ></vdr-custom-detail-component-host>
+
             <vdr-order-history
                 [order]="order"
                 [history]="history$ | async"
