--- a/packages/admin-ui/src/lib/settings/src/components/global-settings/global-settings.component.html
+++ b/packages/admin-ui/src/lib/settings/src/components/global-settings/global-settings.component.html
@@ -69,4 +69,9 @@
             [readonly]="!(updatePermission | hasPermission)"
         ></vdr-tabbed-custom-fields>
     </section>
+    <vdr-custom-detail-component-host
+        locationId="global-settings-detail"
+        [entity$]="entity$"
+        [detailForm]="detailForm"
+    ></vdr-custom-detail-component-host>
 </form>
