--- a/packages/admin-ui/src/lib/order/src/components/cancel-order-dialog/cancel-order-dialog.component.html
+++ b/packages/admin-ui/src/lib/order/src/components/cancel-order-dialog/cancel-order-dialog.component.html
@@ -16,6 +16,7 @@
             <tr
                 *ngFor="let line of order.lines"
                 class="order-line"
+                [class.is-disabled]="cancelAll"
                 [class.is-cancelled]="line.quantity === 0"
             >
                 <td class="align-middle thumb">
@@ -31,6 +32,8 @@
                     <input
                         *ngIf="line.quantity > 0 && !order.active; else nonEditable"
                         [(ngModel)]="lineQuantities[line.id]"
+                        (input)="checkIfAllSelected()"
+                        [disabled]="cancelAll"
                         type="number"
                         [max]="line.quantity"
                         min="0"
@@ -41,6 +44,14 @@
         </table>
     </div>
     <div class="cancellation-details">
+        <clr-radio-wrapper>
+          <input type="radio" clrRadio [value]="true" [(ngModel)]="cancelAll" name="options" (ngModelChange)="radioChanged()" />
+          <label>{{ 'order.cancel-entire-order' | translate }}</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+          <input type="radio" clrRadio [value]="false" [(ngModel)]="cancelAll" name="options" (ngModelChange)="radioChanged()" />
+          <label>{{ 'order.cancel-specified-items' | translate }}</label>
+        </clr-radio-wrapper>
         <label class="clr-control-label">{{ 'order.cancellation-reason' | translate }}</label>
         <ng-select
             [items]="reasons"
