--- a/packages/admin-ui/src/lib/core/src/shared/components/asset-preview/asset-preview.component.html
+++ b/packages/admin-ui/src/lib/core/src/shared/components/asset-preview/asset-preview.component.html
@@ -11,6 +11,7 @@
             <img
                 class="asset-image"
                 [src]="asset | assetPreview: size"
+                [ngClass]="size"
                 #imageElement
                 (load)="onImageLoad()"
             />
