--- a/packages/admin-ui/src/lib/core/src/shared/components/formatted-address/formatted-address.component.html
+++ b/packages/admin-ui/src/lib/core/src/shared/components/formatted-address/formatted-address.component.html
@@ -1,5 +1,6 @@
 <ul class="address-lines">
     <li *ngIf="address.fullName">{{ address.fullName }}</li>
+    <li *ngIf="address.company">{{ address.company }}</li>
     <li *ngIf="address.streetLine1">{{ address.streetLine1 }}</li>
     <li *ngIf="address.streetLine2">{{ address.streetLine2 }}</li>
     <li *ngIf="address.city">{{ address.city }}</li>
