feat(ui-devkit): Support Clarity Sass variable overrides (#1684)

--- a/packages/admin-ui/src/lib/static/styles/styles.scss
+++ b/packages/admin-ui/src/lib/static/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "global/sass-overrides";
 @import "~@clr/icons/clr-icons.min.css";
 @import "~@clr/ui/src/utils/components.clarity";
 @import "~@ng-select/ng-select/themes/default.theme.css";
