--- a/packages/admin-ui/src/lib/core/src/shared/dynamic-form-inputs/select-form-input/select-form-input.component.html
+++ b/packages/admin-ui/src/lib/core/src/shared/dynamic-form-inputs/select-form-input/select-form-input.component.html
@@ -1,6 +1,6 @@
 <select clrSelect [formControl]="formControl" [vdrDisabled]="readonly">
     <option *ngIf="config.nullable" [ngValue]="null"></option>
-    <option *ngFor="let option of options" [ngValue]="option.value">
-        {{ (option | customFieldLabel) || option.label || option.value }}
+    <option *ngFor="let option of options;trackBy:trackByFn" [ngValue]="option.value">
+        {{ (option | customFieldLabel:(uiLanguage$ | async)) || option.label || option.value }}
     </option>
 </select>
