--- a/packages/admin-ui/src/lib/core/src/shared/components/rich-text-editor/external-image-dialog/external-image-dialog.component.html
+++ b/packages/admin-ui/src/lib/core/src/shared/components/rich-text-editor/external-image-dialog/external-image-dialog.component.html
@@ -28,6 +28,7 @@
 
 <ng-template vdrDialogButtons>
     <button type="submit" (click)="select()" class="btn btn-primary" [disabled]="form.invalid || !previewLoaded">
-        {{ 'editor.insert-image' | translate }}
+        <ng-container *ngIf="existing; else doesNotExist">{{ 'common.update' | translate }}</ng-container>
+        <ng-template #doesNotExist>{{ 'editor.insert-image' | translate }}</ng-template>
     </button>
 </ng-template>
