--- a/packages/admin-ui/src/lib/core/src/shared/components/timeline-entry/timeline-entry.component.html
+++ b/packages/admin-ui/src/lib/core/src/shared/components/timeline-entry/timeline-entry.component.html
@@ -21,7 +21,7 @@
                 {{ createdAt | localeDate: 'short' }}
             </div>
             <div class="name">
-                {{ name }}
+                {{ name | translate }}
             </div>
         </div>
         <div [class.featured-entry]="featured">
